--- a/resources/translation_de.properties
+++ b/resources/translation_de.properties
@@ -20,6 +20,30 @@
 # THE SOFTWARE.
 #
 
-failed.to.write.config=Fehler beim schreiben der Konfiguration
-plugin.initialized=Plugin initialisiert
-plugin.stopped=Plugin angehalten
+command.add.command=addCmd
+command.add.description=Fügt einen Befehl hinzu.
+command.add.extendedDescription=Fügt einen neuen Befehl mithilfe von confCmd hinzu.
+command.add.success=[{text="[confCmd]", color=light_blue}, {text=" Befehl ", color=dark_green}, {text="%s", color=red}, {text="hinzugefügt.",color=dark_green}]
+command.delete.command=deleteCmd
+command.delete.description=Löscht einen Befehl.
+command.delete.extendedDescription=Löscht den mit confCmd erstellten Befehl.
+command.delete.success=[{text="[confCmd]", color=light_blue}, {text=" Befehl ", color=dark_green}, {text="%s", color=red}, {text="gelöscht.",color=dark_green}]
+command.edit.command=editCmd
+command.edit.description=Bearbeite einen Befehl.
+command.edit.extendedDescription=Bearbeite einen mit confCmd erstellten Befehl.
+command.edit.success=[{text="[confCmd]", color=light_blue}, {text=" Befehl ", color=dark_green}, {text="%s", color=red}, {text="bearbeitet.",color=dark_green}]
+command.initialized=Befehl \"%s\" initialisiert.
+command.param.command=Befehl
+command.param.description=Beschreibung
+command.param.extendedDescription=erweiterteBeschreibung
+command.param.message=Nachricht
+command.param.name=Name
+command.param.permission=Permission
+command.param.setting=Einstellung
+command.param.value=Wert
+error.command.multiple.times=Es wird der selbe Befehl mehrfach verwendet\:
+error.commend.zero=Jeder Befehl benötig wenigstens einen Befehl.
+error.config.write.failed=Fehler beim schreiben der Konfigurationsdatei.
+error.no.custom.translation=no custom translation -> load translation from jar
+plugin.initialized=Plugin initialisiert.
+plugin.stopped=Plugin angehalten.
