--- a/resources/translation_en.properties
+++ b/resources/translation_en.properties
@@ -20,6 +20,29 @@
 # THE SOFTWARE.
 #
 
-failed.to.write.config=Failed to write config
+command.add.command=addCmd
+command.add.description=Add a new command
+command.add.extendedDescription=Add a new command with confCmd
+command.add.success=[{text="[confCmd]", color=light_blue}, {text=" Command ", color=dark_green}, {text="%s", color=red}, {text="added.",color=dark_green}]
+command.delete.command=deleteCmd
+command.delete.description=deletes a command
+command.delete.extendedDescription=Deletes the command from confCmd
+command.delete.success=[{text="[confCmd]", color=light_blue}, {text=" Command ", color=dark_green}, {text="%s", color=red}, {text="deleted.",color=dark_green}]
+command.edit.command=editCmd
+command.edit.description=Edit a command
+command.edit.extendedDescription=edit a command created with confCmd
+command.edit.success=[{text="[confCmd]", color=light_blue}, {text=" Command ", color=dark_green}, {text="%s", color=red}, {text="edited.",color=dark_green}]
+command.initialized=Command \"%s\" initialized
+command.param.command=command
+command.param.description=description
+command.param.extendedDescription=extendedDescription
+command.param.message=message
+command.param.name=name
+command.param.permission=permission
+command.param.setting=setting
+command.param.value=value
+error.command.multiple.times=Your using the same command multiple times\:
+error.commend.zero=every command need at least one command
+error.config.write.failed=Failed to write config
 plugin.initialized=plugin initialized
 plugin.stopped=plugin stopped
