small improvements and cleaning up

--- a/resources/translation_de.properties
+++ b/resources/translation_de.properties
@@ -44,6 +44,7 @@ command.param.value=Wert
 error.command.multiple.times=Es wird der selbe Befehl mehrfach verwendet\:
 error.commend.zero=Jeder Befehl benötig wenigstens einen Befehl.
 error.config.write.failed=Fehler beim schreiben der Konfigurationsdatei.
-error.no.custom.translation=no custom translation -> load translation from jar
+error.no.connection.mcStats=mcStats konnte nicht erreicht werden.
+error.no.custom.translation=keine angepasste Übersetzung vorhanden -> Übersetzung aus jar geladen.
 plugin.initialized=Plugin initialisiert.
 plugin.stopped=Plugin angehalten.
