keys now are working in messages

--- a/resources/translation_de.properties
+++ b/resources/translation_de.properties
@@ -35,6 +35,7 @@ command.edit.success=[{text="[confCmd]", color=light_blue}, {text=" Befehl ", co
 command.initialized=Befehl \"%s\" initialisiert.
 command.param.command=Befehl
 command.param.description=Beschreibung
+command.param.executeCommands=executeCommands
 command.param.extendedDescription=erweiterteBeschreibung
 command.param.message=Nachricht
 command.param.name=Name
