--- a/resources/translation_en.properties
+++ b/resources/translation_en.properties
@@ -41,6 +41,7 @@ command.param.name=name
 command.param.permission=permission
 command.param.setting=setting
 command.param.value=value
+command.param.executeCommands=executeCommands
 error.command.multiple.times=Your using the same command multiple times\:
 error.commend.zero=every command need at least one command
 error.config.write.failed=Failed to write config
